# demoJenkins

./: CMakeLists.txt  demo.xml  gerrit-trigger.txt  groups  hello.c  jenkinsfile  project.config  test.xml
